Styling für Turniere-Seite

--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -52,6 +52,10 @@ table
   th
     background: #eee
 
+i.icon
+  font-family: 'FontAwesome'
+  font-style: normal
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
