--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1462,6 +1462,10 @@ table {
   table th {
     background: #eee; }
 
+i.icon {
+  font-family: "FontAwesome";
+  font-style: normal; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
@@ -1760,13 +1764,49 @@ footer #block-masquerade {
 @media only screen and (min-width: 768px) {
   .page-node-type-article .field--name-field-image {
     float: left;
-    margin: 5px 15px 5px 0; } }
+    margin: 5px 15px 5px 0; }
+
+  .page-node-type-page .node-turniere {
+    margin-left: -15px;
+    margin-right: -15px; }
+    .page-node-type-page .node-turniere:before, .page-node-type-page .node-turniere:after {
+      content: " ";
+      display: table; }
+    .page-node-type-page .node-turniere:after {
+      clear: both; }
+    .page-node-type-page .node-turniere .content-box {
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px;
+      text-align: center;
+      min-height: 250px; } }
+    @media only screen and (min-width: 768px) and (min-width: 768px) {
+      .page-node-type-page .node-turniere .content-box {
+        float: left;
+        width: 50%; } }
+@media only screen and (min-width: 768px) {
+    .page-node-type-page .node-turniere i:before {
+      font-size: 39px;
+      font-size: 3rem; } }
 /* End Media Query Tablet */
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*------------- Desktop narrow  -------------- */
 /*------------------------------------------- */
 /*------------------------------------------- */
+@media only screen and (min-width: 1024px) {
+  .page-node-type-page .node-turniere .content-box {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    min-height: 250px; } }
+  @media only screen and (min-width: 1024px) and (min-width: 992px) {
+    .page-node-type-page .node-turniere .content-box {
+      float: left;
+      width: 33.33333%; } }
+
 /* End Media Query Tablet */
 /*------------------------------------------- */
 /*------------------------------------------- */
