--- a/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -11,6 +11,8 @@ $base-text-color: #333
 $light-grey-text: #888
 $grey-text: #666
 $black: black
+$blue: #6A7BA8
+$grey-background: #888
 
 $red-grey: #A36E7C
 $turkis: #006A85
