--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -49,6 +49,11 @@
         +x-rem(font-size, 1.35)
       .box-text
         color: #666
+      a:hover
+        text-decoration: none
+      h3, .box-text
+        a:hover
+          text-decoration: underline
       i:before
         font-family: 'Fontawesome'
         content: "\f091"
@@ -61,38 +66,41 @@
         display: block
         margin: auto
         line-height: 110px
+      a:hover
+        i:before
+          color: #ddd
       &.vereinsmeisterschaft
         i:before
           background: $primary-color
           content: "\f135"
-        h3
+        h3, h3 a
           color: $primary-color
       &.pokal
-        h3
+        h3, h3 a
           color: darken($grey-background, 10%)
       &.blitz
         i:before
           background: $blue
           content: "\f0e7"
-        h3
+        h3, h3 a
           color: darken($blue, 10%)
       &.schnellschach
         i:before
           content: "\f017"
-        h3
+        h3, h3 a
           color: darken($grey-background, 10%)
       &.tusi
         i:before
           content: "\f248"
           background: $blue
           +x-rem(font-size, 3)
-        h3
+        h3, h3 a
           color: darken($blue, 10%)
       &.thema
         i:before
           content: "\f02d"
           background: $primary-color
-        h3
+        h3, h3 a
           color: $primary-color
 
 
