--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -49,6 +49,8 @@
         +x-rem(font-size, 1.35)
       .box-text
         color: #666
+      a
+        display: inline-block
       a:hover
         text-decoration: none
       h3, .box-text
@@ -68,7 +70,7 @@
         line-height: 110px
       a:hover
         i:before
-          color: #ddd
+          color: #333
       &.vereinsmeisterschaft
         i:before
           background: $primary-color
