--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -16,6 +16,9 @@
           margin-bottom: 0
         a
           color: white
+      .views-field-field-fc-sl-image
+        img
+          width: 100%
 
 .sidebar
   .view-events-list
@@ -70,7 +73,6 @@
   .path-frontpage
     #block-views-block-header-slideshow-block-1
       width: 100%
-      height: 450px
       overflow: hidden
       .view-header-slideshow
         .views-row
@@ -114,6 +116,9 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop)
+  .path-frontpage
+    #block-views-block-header-slideshow-block-1
+      height: 450px
 
 
 /* End Media Query Tablet */
