--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -44,13 +44,15 @@ ul.tabs
 
 table
   +x-rem(font-size, 1)
+  margin-bottom: 10px
   th, td
     text-align: center
     padding: 2px 6px
     border: 1px solid #ccc
     +x-rem(font-size, 1)
   th
-    background: #eee
+    background: $secondary-color
+    color: white
 
 i.icon
   font-family: 'FontAwesome'
