--- a/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -3,9 +3,6 @@
 $orange-flaeche: #ED8600
 $orange-text: #E27500
 
-$primary-color: #ED8600
-$primary-color-text: #E27500
-
 $link-color: $orange-text
 $base-text-color: #333
 $light-grey-text: #888
@@ -13,6 +10,10 @@ $grey-text: #666
 $black: black
 $blue: #6A7BA8
 $grey-background: #888
+
+$primary-color: $orange-flaeche
+$primary-color-text: #E27500
+$secondary-color: $blue
 
 $red-grey: #A36E7C
 $turkis: #006A85
