Überflüssige Skripte in Base Theme deaktiviert, Menu Styling

--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -23,6 +23,17 @@
 .content_layout
   margin-top: 30px
 
+.sidebar
+  #block-mainnavigation
+    ul
+      li
+        display: block
+        float: none
+      ul
+        display: block
+        position: static
+
+
 .footer-menu
   background: #999
   a
