--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1528,6 +1528,13 @@ i.icon {
 .content_layout {
   margin-top: 30px; }
 
+.sidebar #block-mainnavigation ul li {
+  display: block;
+  float: none; }
+.sidebar #block-mainnavigation ul ul {
+  display: block;
+  position: static; }
+
 .footer-menu {
   background: #999; }
   .footer-menu a {
@@ -1819,6 +1826,32 @@ footer #block-masquerade {
   .page-node-type-page .node-turniere .content-box.thema h3, .page-node-type-page .node-turniere .content-box.thema h3 a {
     color: #ED8600; }
 
+.page-node-type-turnier #table-tabs {
+  margin: 5px 0 12px; }
+  .page-node-type-turnier #table-tabs .tab-button {
+    display: inline-block;
+    border: 1px solid #ddd;
+    padding: 3px 8px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    margin-right: 7px;
+    background: #f5f5f5; }
+    .page-node-type-turnier #table-tabs .tab-button.active {
+      background: #888;
+      color: white; }
+    .page-node-type-turnier #table-tabs .tab-button:hover {
+      cursor: pointer;
+      cursor: hand; }
+    .page-node-type-turnier #table-tabs .tab-button:last-child {
+      margin-right: 0; }
+.page-node-type-turnier #info-tabs > .field {
+  display: none; }
+  .page-node-type-turnier #info-tabs > .field:first-child {
+    display: block; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
@@ -1922,31 +1955,33 @@ nav#block-hsk-zymphonies-main-menu {
     clear: both;
     overflow: hidden;
     visibility: hidden; }
-  nav#block-hsk-zymphonies-main-menu ul#main-menu {
+  nav#block-hsk-zymphonies-main-menu ul.menu {
     margin: 0;
     padding: 0; }
-    nav#block-hsk-zymphonies-main-menu ul#main-menu li a {
+    nav#block-hsk-zymphonies-main-menu ul.menu li a {
       background: #f3f3f3;
       border-bottom: 1px solid #ccc;
       color: #333; }
-      nav#block-hsk-zymphonies-main-menu ul#main-menu li a:hover {
+      nav#block-hsk-zymphonies-main-menu ul.menu li a:hover {
         background: #e5e5e5; }
-      nav#block-hsk-zymphonies-main-menu ul#main-menu li a .sub-arrow {
+      nav#block-hsk-zymphonies-main-menu ul.menu li a .sub-arrow {
         background: white;
         color: #555;
         border: 1px solid #ccc; }
-        nav#block-hsk-zymphonies-main-menu ul#main-menu li a .sub-arrow:hover {
+        nav#block-hsk-zymphonies-main-menu ul.menu li a .sub-arrow:hover {
           color: black;
           border: 1px solid #aaa;
           color: white;
           background: #ED8600; }
-    nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a {
-      padding-left: 25px;
-      background: #e5e5e5;
-      font-size: 12.35px;
-      font-size: 0.95rem; }
-      nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a:hover {
-        background: #d5d5d5; }
+    nav#block-hsk-zymphonies-main-menu ul.menu li ul {
+      display: none; }
+      nav#block-hsk-zymphonies-main-menu ul.menu li ul li a {
+        padding-left: 25px;
+        background: #e5e5e5;
+        font-size: 12.35px;
+        font-size: 0.95rem; }
+        nav#block-hsk-zymphonies-main-menu ul.menu li ul li a:hover {
+          background: #d5d5d5; }
 
 #block-mobilemenubutton {
   width: 29px;
@@ -2061,52 +2096,74 @@ nav#block-hsk-footer {
     clear: both; }
   header .region-primary-menu {
     display: block; }
-  header nav#block-hsk-zymphonies-main-menu ul#main-menu li.active a {
-    background: #ED8600;
-    color: white; }
-  header nav#block-hsk-zymphonies-main-menu ul#main-menu li {
-    margin-right: 5px; }
-    header nav#block-hsk-zymphonies-main-menu ul#main-menu li:hover {
-      background: none; }
-    header nav#block-hsk-zymphonies-main-menu ul#main-menu li a {
-      background: none;
-      border: none;
-      color: #888; }
-      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a:hover {
-        background: #ED8600;
-        color: white; }
-      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.has-submenu:hover {
-        background: none;
-        color: #888; }
-      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.highlighted, header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.highlighted:hover {
-        background: #ED8600;
-        color: white; }
-      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.has-submenu.highlighted {
-        -webkit-border-radius: 4px 4px 0 0;
-        -moz-border-radius: 4px 4px 0 0;
-        -ms-border-radius: 4px 4px 0 0;
-        -o-border-radius: 4px 4px 0 0;
-        border-radius: 4px 4px 0 0; }
-    header nav#block-hsk-zymphonies-main-menu ul#main-menu li a span.sub-arrow {
-      display: none; }
-  header nav#block-hsk-zymphonies-main-menu ul#main-menu ul {
-    background: #ED8600;
-    border: none;
-    top: 29px;
-    -webkit-border-radius: 0 4px 4px 4px;
-    -moz-border-radius: 0 4px 4px 4px;
-    -ms-border-radius: 0 4px 4px 4px;
-    -o-border-radius: 0 4px 4px 4px;
-    border-radius: 0 4px 4px 4px; }
-    header nav#block-hsk-zymphonies-main-menu ul#main-menu ul li {
-      margin-right: 0; }
-      header nav#block-hsk-zymphonies-main-menu ul#main-menu ul li a {
-        color: white;
-        padding: 6px 15px;
+  header nav#block-hsk-zymphonies-main-menu {
+    *zoom: 1; }
+    header nav#block-hsk-zymphonies-main-menu:after {
+      content: "\0020";
+      display: block;
+      height: 0;
+      clear: both;
+      overflow: hidden;
+      visibility: hidden; }
+    header nav#block-hsk-zymphonies-main-menu ul.menu li {
+      display: inline;
+      float: left;
+      margin-right: 5px; }
+      header nav#block-hsk-zymphonies-main-menu ul.menu li:hover {
         background: none; }
-        header nav#block-hsk-zymphonies-main-menu ul#main-menu ul li a:hover {
-          color: black;
+      header nav#block-hsk-zymphonies-main-menu ul.menu li.menu-item--active-trail a {
+        background: #ED8600;
+        color: white; }
+      header nav#block-hsk-zymphonies-main-menu ul.menu li a {
+        background: none;
+        border: none;
+        color: #888;
+        float: left;
+        padding: 3px 10px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        border-radius: 5px; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu li a.is-active {
+          background: #ED8600;
+          color: white; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu li a:hover {
+          background: #ED8600;
+          color: white;
+          text-decoration: none; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu li a.has-submenu:hover {
+          background: none;
+          color: #888; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu li a.highlighted, header nav#block-hsk-zymphonies-main-menu ul.menu li a.highlighted:hover {
+          background: #ED8600;
+          color: white; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu li a.has-submenu.highlighted {
+          -webkit-border-radius: 4px 4px 0 0;
+          -moz-border-radius: 4px 4px 0 0;
+          -ms-border-radius: 4px 4px 0 0;
+          -o-border-radius: 4px 4px 0 0;
+          border-radius: 4px 4px 0 0; }
+      header nav#block-hsk-zymphonies-main-menu ul.menu li a span.sub-arrow {
+        display: none; }
+    header nav#block-hsk-zymphonies-main-menu ul.menu ul {
+      background: #ED8600;
+      border: none;
+      top: 29px;
+      -webkit-border-radius: 0 4px 4px 4px;
+      -moz-border-radius: 0 4px 4px 4px;
+      -ms-border-radius: 0 4px 4px 4px;
+      -o-border-radius: 0 4px 4px 4px;
+      border-radius: 0 4px 4px 4px; }
+      header nav#block-hsk-zymphonies-main-menu ul.menu ul li {
+        margin-right: 0; }
+        header nav#block-hsk-zymphonies-main-menu ul.menu ul li a {
+          color: white;
+          padding: 6px 15px;
           background: none; }
+          header nav#block-hsk-zymphonies-main-menu ul.menu ul li a:hover {
+            color: black;
+            background: none; }
 
   #block-mobilemenubutton {
     display: none; }
