--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -30,7 +30,7 @@ header
 nav#block-hsk-zymphonies-main-menu
   @include legacy-pie-clearfix
   clear: both
-  ul#main-menu
+  ul.menu
     margin: 0
     padding: 0
     li
@@ -50,6 +50,7 @@ nav#block-hsk-zymphonies-main-menu
             color: white
             background: $primary-color
       ul
+        display: none
         li
           a
             padding-left: 25px
@@ -205,22 +206,32 @@ nav#block-hsk-footer
       display: block
 
     nav#block-hsk-zymphonies-main-menu
-      ul#main-menu
-        li.active
-          a
-            background: $primary-color
-            color: white
+      +legacy-pie-clearfix
+      ul.menu
         li
+          display: inline
+          float: left
           margin-right: 5px
           &:hover
             background: none
+          &.menu-item--active-trail
+            a
+              background: $primary-color
+              color: white
           a
             background: none
             border: none
             color: $light-grey-text
+            float: left
+            padding: 3px 10px
+            +border-radius(5px)
+            &.is-active
+              background: $primary-color
+              color: white
             &:hover
               background: $primary-color
               color: white
+              text-decoration: none
             &.has-submenu:hover
               background: none
               color: #888
