--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -105,6 +105,33 @@
         h3, h3 a
           color: $primary-color
 
+.page-node-type-turnier
+  #table-tabs
+    margin: 5px 0 12px
+    .tab-button
+      display: inline-block
+      border: 1px solid #ddd
+      padding: 3px 8px
+      +border-radius(5px)
+      margin-right: 7px
+      background: #f5f5f5
+      &.active
+        background: $grey-background
+        color: white
+      &:hover
+        cursor: pointer
+        cursor: hand
+      &:last-child
+        margin-right: 0
+
+  #info-tabs
+    > .field
+      display: none
+      &:first-child
+        display: block
+
+
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
