--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -58,6 +58,9 @@ nav#block-hsk-zymphonies-main-menu
             +x-rem(font-size, 0.95)
             &:hover
               background: #d5d5d5
+      > ul
+        top: 29px!important
+
 
     //li
     //  display: inline
