--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1827,20 +1827,23 @@ footer #block-masquerade {
     color: #ED8600; }
 
 .page-node-type-turnier #table-tabs {
-  margin: 5px 0 12px; }
+  margin: 12px 0 25px; }
   .page-node-type-turnier #table-tabs .tab-button {
     display: inline-block;
     border: 1px solid #ddd;
-    padding: 3px 8px;
+    padding: 5px 12px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border-radius: 5px;
     margin-right: 7px;
-    background: #f5f5f5; }
+    background: #f5f5f5;
+    font-size: 11.7px;
+    font-size: 0.9rem;
+    font-weight: bold; }
     .page-node-type-turnier #table-tabs .tab-button.active {
-      background: #888;
+      background: #666;
       color: white; }
     .page-node-type-turnier #table-tabs .tab-button:hover {
       cursor: pointer;
@@ -1851,6 +1854,8 @@ footer #block-masquerade {
   display: none; }
   .page-node-type-turnier #info-tabs > .field:first-child {
     display: block; }
+  .page-node-type-turnier #info-tabs > .field .field__label {
+    display: none; }
 
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -1904,6 +1909,13 @@ footer #block-masquerade {
     .page-node-type-page .node-turniere .content-box {
       float: left;
       width: 33.33333%; } }
+
+.page-node-type-turnier #info-tabs .field--name-field-standings table {
+  width: 100%; }
+.page-node-type-turnier #info-tabs .field--name-field-current-results table {
+  min-width: 50%; }
+.page-node-type-turnier #info-tabs .field--name-field-pairings table {
+  width: 100%; }
 
 /* End Media Query Tablet */
 /*------------------------------------------- */
