--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -107,28 +107,17 @@
 
 .page-node-type-turnier
   #table-tabs
-    margin: 5px 0 12px
+    margin: 12px 0 25px
     .tab-button
-      display: inline-block
-      border: 1px solid #ddd
-      padding: 3px 8px
-      +border-radius(5px)
-      margin-right: 7px
-      background: #f5f5f5
-      &.active
-        background: $grey-background
-        color: white
-      &:hover
-        cursor: pointer
-        cursor: hand
-      &:last-child
-        margin-right: 0
+      +tab-button
 
   #info-tabs
     > .field
       display: none
       &:first-child
         display: block
+      .field__label
+        display: none
 
 
 
@@ -176,6 +165,18 @@
       .content-box
         +make-md-column(4)
         min-height: 320px
+
+.page-node-type-turnier
+  #info-tabs
+    .field--name-field-standings
+      table
+        width: 100%
+    .field--name-field-current-results
+      table
+        min-width: 50%
+    .field--name-field-pairings
+      table
+        width: 100%
 
 
 /* End Media Query Tablet */
