--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -11,4 +11,22 @@ $divider-line: 1px solid #e5e5e5
   font-weight: $bold
   padding-right: 6px
 
+@mixin tab-button
+  display: inline-block
+  border: 1px solid #ddd
+  padding: 5px 12px
+  +border-radius(5px)
+  margin-right: 7px
+  background: #f5f5f5
+  +x-rem(font-size, 0.9)
+  font-weight: bold
+  &.active
+    background: #666
+    color: white
+  &:hover
+    cursor: pointer
+    cursor: hand
+  &:last-child
+    margin-right: 0
+
 
