Abstand nach unten für Messages

--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1469,6 +1469,9 @@ i.icon {
   font-family: "FontAwesome";
   font-style: normal; }
 
+.messages {
+  margin-bottom: 30px; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
