--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -3,7 +3,7 @@
 /*------------- All Screen Sizes -------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-html
+html 
   box-sizing: border-box
 
 *, *:before, *:after
@@ -57,6 +57,9 @@ table
 i.icon
   font-family: 'FontAwesome'
   font-style: normal
+
+.messages
+  margin-bottom: 30px
 
 
 /*------------------------------------------- */
