--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -118,6 +118,12 @@
         display: block
       .field__label
         display: none
+    .field--name-field-pairings
+      table
+        th
+          border-right: 3px solid white
+          &:last-child
+            border-right: none
 
 
 
