--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -215,6 +215,7 @@ nav#block-hsk-footer
           display: inline
           float: left
           margin-right: 5px
+          text-transform: uppercase
           &:hover
             background: none
           &.menu-item--active-trail
@@ -251,6 +252,7 @@ nav#block-hsk-footer
           background: $primary-color
           border: none
           top: 29px
+          padding: 8px 0
           +border-radius(0 4px 4px 4px)
           li
             margin-right: 0
