--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -183,6 +183,15 @@
     .field--name-field-pairings
       table
         width: 100%
+  .vormeisterturnier
+    .field--name-field-pairings
+      table
+        th, td
+          +x-rem(font-size, 0.8)
+        td
+          padding-left: 3px
+          padding-right: 3px
+
 
 
 /* End Media Query Tablet */
