--- a/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -10,6 +10,7 @@ $grey-text: #666
 $black: black
 $blue: #6A7BA8
 $grey-background: #888
+$divider-line-color: #e5e5e5
 
 $primary-color: $orange-flaeche
 $primary-color-text: #E27500
