--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -3,7 +3,7 @@ $divider-line: 1px solid #e5e5e5
 @mixin divider-line-bottom
   margin-bottom: 20px
   padding-bottom: 10px
-  border-bottom: 1px solid #e5e5e5
+  border-bottom: 1px solid $divider-line-color
 
 @mixin highlighted-field-label
   color: $red-grey
