--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -216,6 +216,7 @@ nav#block-hsk-footer
           float: left
           margin-right: 5px
           text-transform: uppercase
+          font-family: $roboto-slab
           &:hover
             background: none
           &.menu-item--active-trail
