--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1535,18 +1535,19 @@ i.icon {
   display: block;
   float: none;
   text-transform: uppercase;
-  border-bottom: 1px solid #e5e5e5; }
+  border-bottom: 1px solid #ccc;
+  font-family: "Roboto Slab", serif; }
   .sidebar ul.menu li.menu-item--expanded {
     list-style-image: none;
     list-style-type: none;
     border-bottom: 0; }
     .sidebar ul.menu li.menu-item--expanded > a {
-      border-bottom: 1px solid #e5e5e5; }
+      border-bottom: 1px solid #ccc; }
   .sidebar ul.menu li.menu-item--active-trail > a {
     color: #E27500; }
   .sidebar ul.menu li a {
-    color: #666;
-    padding: 8px 0 8px 2px;
+    color: #888;
+    padding: 7px 0 7px 4px;
     display: block; }
     .sidebar ul.menu li a:hover {
       text-decoration: none;
@@ -1556,10 +1557,13 @@ i.icon {
   .sidebar ul.menu li ul {
     display: block;
     position: static; }
-    .sidebar ul.menu li ul li a:before {
-      content: "•";
-      color: #bbb;
-      margin-right: 5px; }
+    .sidebar ul.menu li ul li a {
+      font-size: 11.05px;
+      font-size: 0.85rem; }
+      .sidebar ul.menu li ul li a:before {
+        content: "•";
+        color: #bbb;
+        margin-right: 5px; }
 
 .footer-menu {
   background: #999; }
@@ -1853,39 +1857,50 @@ footer #block-masquerade {
     color: #ED8600; }
 
 .page-node-type-turnier #table-tabs {
-  margin: 12px 0 25px; }
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  -ms-border-radius: 5px 5px 0 0;
+  -o-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+  margin: 12px 0 0;
+  background: #ddd; }
   .page-node-type-turnier #table-tabs .tab-button {
     display: inline-block;
-    border: 1px solid #ddd;
-    padding: 5px 12px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
+    padding: 12px 12px;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
     margin-right: 7px;
-    background: #f5f5f5;
+    color: #777;
     font-size: 11.7px;
     font-size: 0.9rem;
     font-weight: bold; }
     .page-node-type-turnier #table-tabs .tab-button.active {
-      background: #666;
-      color: white; }
+      border: 1px solid #bbb;
+      border-bottom: none;
+      background: white;
+      color: #333; }
     .page-node-type-turnier #table-tabs .tab-button:hover {
       cursor: pointer;
       cursor: hand; }
     .page-node-type-turnier #table-tabs .tab-button:last-child {
       margin-right: 0; }
-.page-node-type-turnier #info-tabs > .field {
-  display: none; }
-  .page-node-type-turnier #info-tabs > .field:first-child {
-    display: block; }
-  .page-node-type-turnier #info-tabs > .field .field__label {
+.page-node-type-turnier #info-tabs {
+  border: 1px solid #ccc;
+  border-top: 0;
+  padding: 25px 22px 12px; }
+  .page-node-type-turnier #info-tabs > .field {
     display: none; }
-.page-node-type-turnier #info-tabs .field--name-field-pairings table th {
-  border-right: 3px solid white; }
-  .page-node-type-turnier #info-tabs .field--name-field-pairings table th:last-child {
-    border-right: none; }
+    .page-node-type-turnier #info-tabs > .field:first-child {
+      display: block; }
+    .page-node-type-turnier #info-tabs > .field .field__label {
+      display: none; }
+  .page-node-type-turnier #info-tabs .field--name-field-pairings table th {
+    border-right: 3px solid white; }
+    .page-node-type-turnier #info-tabs .field--name-field-pairings table th:last-child {
+      border-right: none; }
 
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -1946,10 +1961,10 @@ footer #block-masquerade {
   min-width: 50%; }
 .page-node-type-turnier #info-tabs .field--name-field-pairings table {
   width: 100%; }
-.page-node-type-turnier .vormeisterturnier .field--name-field-pairings table th, .page-node-type-turnier .vormeisterturnier .field--name-field-pairings table td {
+.page-node-type-turnier #info-tabs .field--name-field-pairings table th, .page-node-type-turnier #info-tabs .field--name-field-pairings table td {
   font-size: 10.4px;
   font-size: 0.8rem; }
-.page-node-type-turnier .vormeisterturnier .field--name-field-pairings table td {
+.page-node-type-turnier #info-tabs .field--name-field-pairings table td {
   padding-left: 3px;
   padding-right: 3px; }
 
@@ -2159,7 +2174,8 @@ nav#block-hsk-footer {
       display: inline;
       float: left;
       margin-right: 5px;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-family: "Roboto Slab", serif; }
       header nav#block-hsk-zymphonies-main-menu ul.menu li:hover {
         background: none; }
       header nav#block-hsk-zymphonies-main-menu ul.menu li.menu-item--active-trail a {
