--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -11,22 +11,36 @@ $divider-line: 1px solid #e5e5e5
   font-weight: $bold
   padding-right: 6px
 
+@mixin tab-container
+  +border-radius(5px 5px 0 0)
+  margin: 12px 0 0
+  background: #ddd
+  .tab-button
+    +tab-button
+
 @mixin tab-button
   display: inline-block
-  border: 1px solid #ddd
-  padding: 5px 12px
-  +border-radius(5px)
+  padding: 12px 12px
+  +border-radius(5px 5px 0 0)
   margin-right: 7px
-  background: #f5f5f5
+  color: #777
+  //background: #f5f5f5
   +x-rem(font-size, 0.9)
   font-weight: bold
   &.active
-    background: #666
-    color: white
+    border: 1px solid #bbb
+    border-bottom: none
+    background: white
+    color: $base-text-color
   &:hover
     cursor: pointer
     cursor: hand
   &:last-child
     margin-right: 0
+
+@mixin tab-content-container
+  border: 1px solid #ccc
+  border-top: 0
+  padding: 25px 22px 12px
 
 
