--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -41,6 +41,26 @@
     .views-row
       margin-bottom: 15px
 
+.path-mannschaften
+  .view-mannschaften
+    .views-row
+      display: flex
+      border-bottom: 1px solid $divider-line-color
+      padding-bottom: 10px
+      margin-bottom: 10px
+      .views-field
+        margin: 0 15px 0 0
+        align-self: center
+      .views-field-field-user-first-name
+        .views-label
+          +x-rem(font-size, 0.8)
+          color: #888
+      .views-field-user-picture
+        img
+          height: 50px
+          width: auto
+
+
 
 
 /*------------------------------------------- */
@@ -103,6 +123,13 @@
           +x-rem(font-size, 0.85)
       .views-field-field-ev-start-time
         +x-rem(font-size, 0.8)
+
+.path-mannschaften
+  .view-mannschaften
+    .views-row
+      display: flex
+      .views-field
+        width: 20%
 
 
 
