Styling Mannschaft Detailseite

--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -155,6 +155,14 @@
         +make-sm-column(6)
         min-height: 320px
 
+  .page-node-type-team
+    .node__content
+      display: flex
+      .field
+        margin-right: 20px
+
+
+
 
 
 /* End Media Query Tablet */
