--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1958,6 +1958,11 @@ footer #block-masquerade {
         float: left;
         width: 50%; } }
 
+@media only screen and (min-width: 768px) {
+  .page-node-type-team .node__content {
+    display: flex; }
+    .page-node-type-team .node__content .field {
+      margin-right: 20px; } }
 /* End Media Query Tablet */
 /*------------------------------------------- */
 /*------------------------------------------- */
